k8s-playground/gotify/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gotify
  labels:
    app: gotify
    environment: playground
