k8s-playground/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
  labels:
    app: gotify
spec:
  type: ClusterIP
  selector:
    app: gotify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
